Bug 468318 - Kate command line options do not work
Summary: Kate command line options do not work
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 23.03.90
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-09 06:32 UTC by Kishore Gopalakrishnan
Modified: 2023-04-10 18:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2023-04-09 06:32:38 UTC
SUMMARY
When I type `kate --version` in a terminal, there is no output (process just exits immediately). Similar for `kate --help` and `kate -h`

STEPS TO REPRODUCE
1. In a terminal, type `kate --version`

OBSERVED RESULT
No output

EXPECTED RESULT
Version number should be printed

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.10-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
kwrite --version
and
dolphin --version
work, so it doesn't seem to affect other KDE applications.

Kate opens fine if I don't pass any options.
Comment 1 Waqar Ahmed 2023-04-09 21:02:28 UTC
Git commit acdddbd3b2a2065d18e6e7500b620d3f1b5f7700 by Waqar Ahmed.
Committed on 09/04/2023 at 21:00.
Pushed by waqar into branch 'master'.

Fix --version, --help, -h, -v not working

M  +2    -1    apps/kate/main.cpp

https://invent.kde.org/utilities/kate/commit/acdddbd3b2a2065d18e6e7500b620d3f1b5f7700
Comment 2 Waqar Ahmed 2023-04-09 21:03:31 UTC
Git commit 8a67b10bd620bbfa04ef2ac04d8ef628888901d5 by Waqar Ahmed.
Committed on 09/04/2023 at 21:03.
Pushed by waqar into branch 'release/23.04'.

Fix --version, --help, -h, -v not working
(cherry picked from commit acdddbd3b2a2065d18e6e7500b620d3f1b5f7700)

M  +2    -1    apps/kate/main.cpp

https://invent.kde.org/utilities/kate/commit/8a67b10bd620bbfa04ef2ac04d8ef628888901d5
Comment 3 Christoph Cullmann 2023-04-10 18:33:12 UTC
Thanks for fixing this.