Fix --version, --help, -h, -v not working

BUG: 468318
(cherry picked from commit acdddbd3b2a2065d18e6e7500b620d3f1b5f7700)