apps/kate/main.cpp
@@ -62,7 +62,8 @@ int main(int argc, char **argv)
      */
     bool detach = true;
     for (int i = 1; i < argc; ++i) {
-        if (!strcmp(argv[i], "-b") || !strcmp(argv[i], "--block") || !strcmp(argv[i], "-i") || !strcmp(argv[i], "--stdin")) {
+        if (!strcmp(argv[i], "-b") || !strcmp(argv[i], "--block") || !strcmp(argv[i], "-i") || !strcmp(argv[i], "--stdin") || !(strcmp(argv[i], "-v"))
+            || !(strcmp(argv[i], "--version")) || !(strcmp(argv[i], "-h")) || !(strcmp(argv[i], "--help"))) {
             detach = false;
             break;
         }
